# givemepi

./: .gitignore  AGENT.md  CMakeLists.txt  README.md  config.toml.example  create_workstealing_test.sh  run.sh
.github/workflows/: ci.yml
PR-progress/: PR-0002-1.md  PR-0003.md  PR-0005-1.md  PR-0005-2.md  PR-0005.md  PR-0006.md  PR-0007.md  PR-0010.md  PR-0011.md  PR-0012.md  PR-0013-automation.md  PR-0014.md  PR-0015.md  PR-0017.md  PR-0018.md  PR-0019.md  PR-0020.md  PR-0021.md  PR-0022.md  PR-0023.md  PR-0024.md  PR-0025-1.md  PR-0025.md  PR-0026.md  PR-0027.md  PR-0028.md
PR-progress/02-09/: PR-0002.md  PR-0003.md  PR-0004.md  PR-0006-1.md  PR-0006-2.md  PR-0008.md  PR-0009.md
PR-progress/10-19/: PR-0013-automation.md  PR-0016.md  PR-0019.md
benchmarks/chudnovsky/: ChudnovskyBenchmark.cpp
benchmarks/storage/: OutOfCoreMergeBenchmark.cpp  StorageThroughputBenchmark.cpp
benchmarks/verification/: FinalVerificationBenchmark.cpp
docs/: CHANGELOG.md  CHECKLIST.md  DECISIONS.md  IMPLEMENTATION_PLAN.md  OPTIMIZATION.md  PR-0028-HIGH-PERFORMANCE-ROADMAP.md  ROADMAP.md  STYLE_GUIDE.md  WORKFLOW.md
docs/reports/: PR-0024-FINAL-VERIFICATION-REPORT.md
include/bigint/: GMPInteger.hpp
include/binary/: BinaryNode.hpp  BinarySplitter.hpp
include/checkpoint/: AtomicFileCommit.hpp  CRC32C.hpp  CheckpointBlockCodec.hpp  CheckpointBlockValidator.hpp  CheckpointFileInspector.hpp  CheckpointManifest.hpp  CheckpointManifestValidator.hpp  CheckpointQuarantine.hpp  CheckpointResumePlanner.hpp  CheckpointStore.hpp  CheckpointTypes.hpp  CheckpointValidation.hpp  GMPSerialization.hpp  ManifestEntryValidator.hpp  ModularPQTVerifier.hpp
include/chudnovsky/: ChudnovskyCalculator.hpp  PrecisionPolicy.hpp
include/config/: CommandLine.hpp  Config.hpp  ConfigLoader.hpp  Defaults.hpp
include/memory/: Alignment.hpp  Arena.hpp  MemoryPool.hpp  ScratchBuffer.hpp
include/platform/: CPUFeatures.hpp  CPUInfo.hpp
include/progress/: JsonProgressReporter.hpp  ProgressMetrics.hpp  ProgressReporter.hpp  ProgressReportingRunner.hpp  ProgressSnapshot.hpp  ProgressState.hpp  ProgressTracker.hpp  ResumeProgress.hpp  TextProgressReporter.hpp
include/scheduler/: IQueue.hpp  LockFreeQueue.hpp  ReferenceQueue.hpp  Scheduler.hpp  SchedulerState.hpp  Task.hpp  TaskHandle.hpp  ThreadPool.hpp  WorkStealingQueue.hpp  Worker.hpp
include/storage/: AsyncReader.hpp  AsyncWriter.hpp  BinaryNodeChunkAdapter.hpp  ChunkCodec.hpp  ChunkIndex.hpp  ChunkStore.hpp  ChunkTypes.hpp  CompressionCodec.hpp  NodeLifecycle.hpp  StorageManager.hpp  StorageMergeCoordinator.hpp  StoragePolicy.hpp  VersionedChunkIndex.hpp
include/verification/: BBPHexDigit.hpp  BBPSamplePolicy.hpp  CanonicalDecimal.hpp  DecimalHexDigit.hpp  FinalOutputInspector.hpp  FinalVerification.hpp  FinalVerifier.hpp  KnownDigitsVerifier.hpp  SHA256.hpp  VerificationManifest.hpp
scripts/: create-memory-structure.sh  create-platform-structure.sh  create-scheduler-structure.sh  install-tomlpp.sh  run2.sh
src/: main.cpp
src/bigint/: GMPInteger.cpp
src/binary/: BinaryNode.cpp  BinarySplitter.cpp
src/checkpoint/: AtomicFileCommit.cpp  CRC32C.cpp  CheckpointBlockCodec.cpp  CheckpointBlockValidator.cpp  CheckpointFileInspector.cpp  CheckpointManifest.cpp  CheckpointManifestValidator.cpp  CheckpointQuarantine.cpp  CheckpointResumePlanner.cpp  CheckpointStore.cpp  CheckpointTypes.cpp  CheckpointValidation.cpp  GMPSerialization.cpp  ManifestEntryValidator.cpp  ModularPQTVerifier.cpp
src/chudnovsky/: ChudnovskyCalculator.cpp  PrecisionPolicy.cpp
src/config/: CommandLine.cpp  Config.cpp  ConfigLoader.cpp
src/memory/: Alignment.cpp  Arena.cpp  MemoryPool.cpp  ScratchBuffer.cpp
src/platform/: CPUFeatures.cpp  CPUInfo.cpp
src/progress/: JsonProgressReporter.cpp  ProgressMetrics.cpp  ProgressReporter.cpp  ProgressReportingRunner.cpp  ProgressSnapshot.cpp  ProgressState.cpp  ProgressTracker.cpp  ResumeProgress.cpp  TextProgressReporter.cpp
src/scheduler/: LockFreeQueue.cpp  ReferenceQueue.cpp  Scheduler.cpp  Task.cpp  TaskHandle.cpp  ThreadPool.cpp  WorkStealingQueue.cpp  Worker.cpp
src/storage/: AsyncReader.cpp  AsyncWriter.cpp  BinaryNodeChunkAdapter.cpp  ChunkCodec.cpp  ChunkIndex.cpp  ChunkStore.cpp  ChunkTypes.cpp  CompressionCodec.cpp  NodeLifecycle.cpp  StorageManager.cpp  StorageMergeCoordinator.cpp  StoragePolicy.cpp  VersionedChunkIndex.cpp
src/verification/: BBPHexDigit.cpp  BBPSamplePolicy.cpp  CanonicalDecimal.cpp  DecimalHexDigit.cpp  FinalOutputInspector.cpp  FinalVerification.cpp  FinalVerifier.cpp  KnownDigitsVerifier.cpp  SHA256.cpp  VerificationManifest.cpp
tests/bigint/: GMPIntegerTest.cpp
tests/binary/: BinarySplittingTest.cpp
tests/checkpoint/: CRC32CTest.cpp  CheckpointBlockCodecTest.cpp  CheckpointBlockValidatorTest.cpp  CheckpointFileInspectorTest.cpp  CheckpointManifestTest.cpp  CheckpointManifestValidatorTest.cpp  CheckpointQuarantineTest.cpp  CheckpointResumePlannerTest.cpp  CheckpointStoreTest.cpp  CheckpointTypesTest.cpp  CheckpointValidationTest.cpp  GMPSerializationTest.cpp  ManifestEntryValidatorTest.cpp  ModularPQTVerifierTest.cpp
tests/chudnovsky/: ChudnovskyCalculatorTest.cpp  PrecisionPolicyTest.cpp
tests/config/: ProgressConfigTest.cpp
tests/memory/: MemoryTest.cpp
tests/platform/: CPUFeaturesTest.cpp
tests/progress/: JsonProgressReporterTest.cpp  ProgressMetricsTest.cpp  ProgressReporterTest.cpp  ProgressReportingRunnerTest.cpp  ProgressSnapshotTest.cpp  ProgressStateTest.cpp  ProgressTrackerTest.cpp  ResumeProgressTest.cpp  TextProgressReporterTest.cpp
tests/scheduler/: LockFreeQueueTest.cpp  SchedulerConcurrencyTest.cpp  SchedulerTest.cpp  TaskTest.cpp  ThreadPoolTest.cpp  WorkStealingBehaviorTest.cpp  WorkStealingTest.cpp
tests/storage/: AsyncReaderTest.cpp  AsyncWriterContractTest.cpp  AsyncWriterTest.cpp  BinaryNodeChunkAdapterTest.cpp  ChunkCodecTest.cpp  ChunkIndexTest.cpp  ChunkStoreTest.cpp  ChunkTypesTest.cpp  CompressionCodecTest.cpp  EvictionPlannerTest.cpp  NodeLifecycleTest.cpp  StorageManagerTest.cpp  StorageMergeCoordinatorTest.cpp  StoragePolicyTest.cpp  (+1 more)
(+12 files in other folders)
